--- a/analysis/bir_theory.ipynb
+++ b/analysis/bir_theory.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Choosing N based on the margin of error\n",
+    "# Choosing n based on the margin of error\n",
     "\n",
     "Shemilt et al. (2014) calculate the appropriate sample size using this equation for calculating the margin of error\n",
     "\n",
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Strictly speaking we should round up here, but this matches Shemilt et al's n=6,040.\n",
+    "Strictly speaking we should round *up* here, but this matches Shemilt et al's n=6,040.\n",
     "\n",
     "Their actual sample proportion though was 0.000498 (3 out of 6,040)\n",
     "\n",
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "or, put another way, a different error margin, if we go back to the original equation"
+    "or, put another way, a different error margin, if we go back to the original equation and plug in the actual observed proportion"
    ]
   },
   {
@@ -148,24 +148,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Their actual margin of error was lower than their target, is still larger than their estimate (this means their margin of error includes 0 and a value more than twice as high as their estimate"
+    "Their actual margin of error was lower than their target, but is still larger than their estimate (this means their margin of error includes 0 and a value more than twice as high as their estimate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 852.0621339529222\n"
+      "estimate: 401\n",
+      "margin of error: 451.2124719529221\n",
+      "range: (0, 852.0621339529222)\n"
      ]
     }
    ],
    "source": [
-    "print(max(0, (bir-ME_hat)*N),(bir+ME_hat)*N)"
+    "estimate = round(bir*N)\n",
+    "print(f\"estimate: {estimate}\")\n",
+    "print(f\"margin of error: {ME_hat*N}\")\n",
+    "est_range = max(0, (bir-ME_hat)*N),(bir+ME_hat)*N\n",
+    "print(f\"range: {est_range}\")"
    ]
   },
   {
@@ -228,6 +234,13 @@
    ],
    "source": [
     "f\"{sample_size(N, bir, z, ME_adj):n}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which tells us that, when properly accounting for uncertainty, this isn't a method that promisises to save a lot of time. Further, if we overestimate by just one document, we won't save any time at all."
    ]
   },
   {
