extra plot label

--- a/analysis/bir_theory.ipynb
+++ b/analysis/bir_theory.ipynb
@@ -595,6 +595,8 @@
     "\n",
     "ax.text(1000, 0.95,f\"Zero work savings\",ha=\"left\",va=\"center\")\n",
     "\n",
+    "ax.text(5000, 0.35,f\"Recall  95%\",ha=\"left\",va=\"center\")\n",
+    "\n",
     "ax.text(1000, 0.05,f\"Recall less than 95%\",ha=\"left\",va=\"center\")\n",
     "\n",
     "plt.savefig('../images/bir_error_distribution.pdf')\n",
